[project]
name = "BalanceDropperBL3"
version = "1.0"
description = "Drop loot from any Item and ItemPool directly at your feet via a searchable blimgui UI."
authors = [{ name = "Ty-Gone" }]
dependencies = [
  "blimgui >= 1.0",
]


[tool.sdkmod]
name = "BalanceDropperBL3"
supported_games = ["BL3, WL"]
download = "https://github.com/mantorofficial/BalanceDropperBl3/raw/refs/heads/main/BalanceDropperBL3.sdkmod"
version = "1.0"
